update docs w/ discord and custom context

--- a/index.mdx
+++ b/index.mdx
@@ -63,4 +63,4 @@ Complete workflows for common document processing scenarios:
   Process medical records and clinical documentation with automated splitting, structured data extraction, and signature verification for compliance
 </Card>
 ---
-Need help? Contact us at **team@cardinal.ai**
+Need help? Contact us at **team@trycardinal.ai**
