--- a/recipes/rag-implementation.mdx
+++ b/recipes/rag-implementation.mdx
@@ -13,6 +13,8 @@ Cardinal makes building knowledge bases easier and more reliable. In this case, 
 - **Providing bounding boxes for every piece of data** – so you know where each item in the menu sits
 - **Semantic chunking** - structuring menu content into meaningful sections, making it easier to search for "all the desserts" or "drinks under $5"
 
+You can find this in our Recipes on Github as well! [Cardinal + Weaviate Recipe Notebook](https://github.com/CardinalOCR/recipes/blob/main/Cardinal____Weaviate.ipynb)
+
 ---
 
 ## Building Your Menu Knowledge Base: Butterflake Croissant Edition
